# philcoino-esp32

./: .gitignore  AGENTS.md  CODEBASE_REVIEW_REPORT.md  CODEBASE_REVIEW_REPORT_2026-07-10.md  CONTRIBUTING.md  README.md  app.json  package.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
apps/mobile/: .env  .env.example  README.md  app.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/components/: compensation-indicator.tsx  dashboard-screen.tsx  extraction-preview.tsx  machine-controls.tsx  paired-keep-awake.tsx  pairing-screen.tsx  thermal-workflow-preview.tsx
apps/mobile/hooks/: use-display-preferences.ts  use-landscape-direction.ts  use-machine-dashboard.ts  use-scale.ts  use-temperature-history.ts
apps/mobile/locales/: en.json  pt-BR.json
apps/mobile/plugins/: with-android-cleartext.js  with-android-locale-resource-qualifiers.js
apps/mobile/src/: debug-device-mode.ts
apps/mobile/src/dashboard/: dashboard-app-lifecycle.ts  dashboard-mutation-session.ts  dashboard-polling-session.ts  dashboard-view-model.ts  extraction-presentation.ts  mutation-feedback.ts
apps/mobile/src/debug/: debug-mobile-profile-repository.ts  extraction-preview-model.ts  thermal-workflow-preview-model.ts
apps/mobile/src/discovery/: device-discovery.ts  native-device-discovery.native.ts  native-device-discovery.ts  zeroconf-scan-cleanup.ts
apps/mobile/src/history/: shot-history-export.native.ts  shot-history-export.ts  shot-history-export.web.ts  shot-history-repository.native.ts  shot-history-repository.ts  shot-history.ts  temperature-history-csv.ts  temperature-history-export.native.ts  temperature-history-export.ts  temperature-history-export.web.ts  temperature-history-repository.native.ts  temperature-history-repository.ts  temperature-history-repository.web.ts  temperature-history-share-service.ts  temperature-history-sync.ts  temperature-history.ts
apps/mobile/src/layout/: dashboard-page-navigation.ts  keep-awake-policy.ts  navigation-rail-inset.ts  responsive-layout.ts
apps/mobile/src/localization/: i18n.ts  translations.ts
apps/mobile/src/networking/: api-client-error.ts  connection-state.ts  debug-device-api-client.ts  device-address.ts  device-api-client.ts  expo-device-api-client.ts
apps/mobile/src/pairing/: debug-pairing-dependencies.ts  pairing-service.ts
apps/mobile/src/profiles/: profile-import.ts  profile-set.ts  profile-synchronization-session.ts
apps/mobile/test/: dashboard-app-lifecycle.test.ts  dashboard-mutation-session.test.ts  dashboard-page-navigation.test.ts  dashboard-polling-session.test.ts  dashboard-view-model.test.ts  debug-device-api-client.test.ts  debug-pairing-dependencies.test.ts  device-api-client.test.ts  device-discovery.test.ts  display-preferences-repository.test.ts  extraction-presentation.test.ts  extraction-preview-model.test.ts  keep-awake-policy.test.ts  localization.test.ts  mobile-profile-repository.test.ts  mutation-feedback.test.ts  navigation-rail-inset.test.ts  pairing-service.test.ts  pre-therm-003-state-envelope.ts  profile-import.test.ts  profile-synchronization-session.test.ts  responsive-layout.test.ts  selected-device-repository.test.ts  shot-history.test.ts  temperature-history-sync.test.ts  temperature-history.test.ts  thermal-workflow-preview-model.test.ts
apps/mobile/types/: react-native-zeroconf.d.ts
design-system/: dducl-design-system.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GIT_RULES.md  README.md  SAFETY.md  TRACKER.md  side-notes.md
docs/architecture/: repository-layout.md
docs/decisions/: firmware-foundation.md
docs/en/: CONTRIBUTING.md  DOCUMENTATION.md  README.md  SAFETY.md
docs/hardware/: esp32-c3-wiring.md  temperature-control-tuning.md
docs/prds/PRD-001/: PRD-001.md
docs/prds/PRD-002/: PRD-002.md
docs/prds/PRD-003/: PRD-003.md
docs/prds/PRD-004/: HUMAN_REVIEW.md  PRD-004.md
docs/prds/PRD-005/: PRD-005.md
docs/prds/PRD-006/: PRD-006.md
docs/prds/PRD-007/: PRD-007.md
docs/prds/PRD-008/: PRD-008.md
docs/prds/PRD-009/: PRD-009.md
docs/prds/PRD-010/: PRD-010.md
docs/prds/PRD-011/: PRD-011.md
docs/protocol/: api-v1-outline.md  api-v2-outline.md
docs/references/: README.md
docs/reviews/: FIRMWARE_BUGFIXING_DECISIONS_AND_VALIDATION.md  FIRMWARE_CODE_REVIEW.md  MOBILE_CODE_REVIEW.md
docs/specifications/: philcoino-desktop-thermal-modeling-simulation-spec.md  philcoino-predictive-temperature-firmware-spec.md
firmware/espresso-machine/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/espresso-machine/components/networking/: CMakeLists.txt
firmware/espresso-machine/components/networking/include/philcoino/: api.hpp  api_codec.hpp  api_json.hpp  api_routes.hpp  esp_networking.hpp  history.hpp
firmware/espresso-machine/components/networking/src/: api.cpp  api_codec.cpp  api_json.cpp  api_machine_codec.cpp  api_routes.cpp  api_workflow_codec.cpp  esp_networking.cpp  history.cpp
firmware/espresso-machine/host-tests/: CMakeLists.txt  api_characterization.json  api_codec_mutation_test.cpp  api_codec_seed_corpus.txt  api_codec_test.cpp  control_test.cpp  firmware_api_test.cpp  firmware_config_test.cpp  peripherals_test.cpp  prediction_test.cpp  validate_contract.ts
firmware/espresso-machine/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
tools/device-simulator/: README.md  package.json
tools/device-simulator/src/: app.ts  index.ts  model.ts
tools/device-simulator/test/: simulator.test.ts  thermal-workflows.test.ts  weighted-extraction.test.ts
tools/thermal-modeling/: README.md  pyproject.toml
tools/thermal-modeling/config/: default.yaml
tools/thermal-modeling/src/philcoino_thermal/: __init__.py  artifacts.py  cli.py  config.py  controller.py  features.py  ingest.py  metrics.py  optimizer.py  plant.py  plots.py  predictor.py  segmentation.py  simulator.py  workflow.py
tools/thermal-modeling/tests/: conftest.py  test_export_cli.py  test_ingest_features.py  test_models_simulation.py
tools/thermal-modeling/tests/fixtures/: golden_history.csv
(+78 files in other folders)
